# s3multiframesink

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
src/: lib.rs  put_object_handler.rs  s3multiframesink.rs
