[package]
name = "s3-multiframe-sink"
version = "0.1.0"
authors = ["Kyle_Hermens <kyle.hermens@gmail.com>"]
edition = "2018"
description = "A gstreamer plugin that splits a video input into multiple files and uploads them to s3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.9.3"
gstreamer = "0.15.3"
gstreamer-base = "0.15.3"
gstreamer-video = "0.15.3"
once_cell = "1.0"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
tokio = {version = "0.2.0", features=["rt-threaded"]}
futures = "0.3.8"
rand = "0.7.3"
futures-retry = "0.5.0"

[lib]
name = "s3multiframesink"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.1.0"
